--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -8,37 +7,37 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-  <link href="{% static 'css/style.less' %}" rel="stylesheet/less">
-  <link href="{% static 'css/jquery-ui.min.css' %}" rel="stylesheet">
+  <link href="css/style.less" rel="stylesheet/less">
+  <link href="css/jquery-ui.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.3/css/bootstrap-select.min.css">
 
-  <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
-  <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.1/less.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.3/js/bootstrap-select.min.js"></script>
 
-  <script type="text/javascript" src="{% static 'js/lib/js.cookie-2.0.3.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/lib/bootstrap.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/lib/prefixfree.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/lib/ws4redis.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/lib/jquery.plugin.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/lib/jquery.countTo.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/lib/jquery-ui.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/lib/knockout-sortable.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/lib/knockout-bootstrap-custom.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/lib/common_functions.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/lib/jquery.keyframes.min.js' %}"></script>
+  <script type="text/javascript" src="js/lib/js.cookie-2.0.3.min.js"></script>
+  <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/lib/prefixfree.min.js"></script>
+  <script type="text/javascript" src="js/lib/ws4redis.js"></script>
+  <script type="text/javascript" src="js/lib/jquery.plugin.min.js"></script>
+  <script type="text/javascript" src="js/lib/jquery.countTo.js"></script>
+  <script type="text/javascript" src="js/lib/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="js/lib/knockout-sortable.min.js"></script>
+  <script type="text/javascript" src="js/lib/knockout-bootstrap-custom.js"></script>
+  <script type="text/javascript" src="js/lib/common_functions.js"></script>
+  <script type="text/javascript" src="js/lib/jquery.keyframes.min.js"></script>
 
-  <script type="text/javascript" src="{% static 'js/knockout/customBinding.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/knockout/models.js' %}"></script>
+  <script type="text/javascript" src="js/knockout/customBinding.js"></script>
+  <script type="text/javascript" src="js/knockout/models.js"></script>
 
-  <script type="text/javascript" src="{% static 'js/remote/viewModels.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/remote/knockout.remote.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/remote/usefullFunction.js' %}"></script>
+  <script type="text/javascript" src="js/remote/viewModels.js"></script>
+  <script type="text/javascript" src="js/remote/knockout.remote.js"></script>
+  <script type="text/javascript" src="js/remote/usefullFunction.js"></script>
 
 </head>
 <body>
@@ -147,7 +146,7 @@
                   <div class="player-child player-child-no-music col-xs-12">
 
                     <div id="wrapper-btn-open-player">
-                      <img id="btn-open-player" width="172px" height="172px" title="Start the shuffle mode" alt="Button play which start the shuffle mode" data-bind="click: patchShuffle" src="{% static 'img/btn-play-large.png' %}">
+                      <img id="btn-open-player" width="172px" height="172px" title="Start the shuffle mode" alt="Button play which start the shuffle mode" data-bind="click: patchShuffle" src="img/btn-play-large.png">
                     </div>
                   </div>
 
@@ -473,9 +472,9 @@
   <div id="tooltip_volume_slider" class="tooltip tooltip-volume-player"></div>
 
   <script type="text/javascript" src="https://w.soundcloud.com/player/api.js"></script>
-  <script type="text/javascript" src="{% static 'js/player/soundcloud.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/player/youtube.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/player/player.js' %}"></script>
+  <script type="text/javascript" src="js/player/soundcloud.js"></script>
+  <script type="text/javascript" src="js/player/youtube.js"></script>
+  <script type="text/javascript" src="js/player/player.js"></script>
 
   <!-- TEMPLATES -->
   <script type="text/html" id="playlist-template">
